updated viewer to include path names

--- a/CNT simulation viewer.ipynb
+++ b/CNT simulation viewer.ipynb
@@ -31,7 +31,7 @@
    ],
    "source": [
     "#loading in initial file\n",
-    "_fname = 'inputFile_010.txt'\n",
+    "_fname = './initfiles/inputFile_010.txt'\n",
     "\n",
     "_fid = open(_fname)\n",
     "_data = np.fromfile(_fid,dtype = 'float')\n",
@@ -65,7 +65,7 @@
    ],
    "source": [
     "#load in single position time-series\n",
-    "_fname = 'testOut_010Y1.txt'\n",
+    "_fname = './outfiles/testOut_010Y1.txt'\n",
     "_fid = open(_fname)\n",
     "_data = np.fromfile(_fid,dtype = 'float')\n",
     "_fid.close()\n",
@@ -100,7 +100,7 @@
    ],
    "source": [
     "#load in and plot initial and final deflection.\n",
-    "_fname = 'testOut_010.txt'\n",
+    "_fname = './outfiles/testOut_010.txt'\n",
     "_fid = open(_fname,'rb')\n",
     "_fid.seek(int(8*(N_time_steps-1)*N_points*6),0)\n",
     "_data = np.fromfile(_fid,count=int(N_points*6),dtype='float')\n",
@@ -133,7 +133,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.8.3"
   },
   "toc": {
    "nav_menu": {},
