Update CNT simulation viewer.ipynb

--- a/CNT simulation viewer.ipynb
+++ b/CNT simulation viewer.ipynb
@@ -65,7 +65,7 @@
    ],
    "source": [
     "#load in single position time-series\n",
-    "_fname = './outfiles/testOut_010Y1.txt'\n",
+    "_fname = 'testOut_010Y1.txt'\n",
     "_fid = open(_fname)\n",
     "_data = np.fromfile(_fid,dtype = 'float')\n",
     "_fid.close()\n",
@@ -100,7 +100,7 @@
    ],
    "source": [
     "#load in and plot initial and final deflection.\n",
-    "_fname = './outfiles/testOut_010.txt'\n",
+    "_fname = 'testOut_010.txt'\n",
     "_fid = open(_fname,'rb')\n",
     "_fid.seek(int(8*(N_time_steps-1)*N_points*6),0)\n",
     "_data = np.fromfile(_fid,count=int(N_points*6),dtype='float')\n",
