--- a/Mass, Extensional and Bending Rigidity Initializer .ipynb
+++ b/Mass, Extensional and Bending Rigidity Initializer .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,23 +13,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Length=5000 #length in nm\n",
-    "Npoints=102 #number of masses in CNT\n",
-    "N_cnt=Npoints*6 #number of masses in CNT with with the degrees of freedom per mass included\n",
+    "##Here will calculate mass,K_cnt, and kap_cnt based on known values.\n",
+    "\n",
+    "Length=5000 #length of DNA molecule in nm\n",
+    "Npoints=102 #number of masses in DNA\n",
+    "N_cnt=Npoints*6 #number of masses in DNA with with the degrees of freedom per mass included\n",
     "sigma=7.767E-25 #kg/nm^2\n",
-    "X0_cnt=(Length)/(Npoints-3) #discrete length of CNT in nm\n",
+    "X0_cnt=(Length)/(Npoints-3) #discrete length of DNA in nm\n",
     "d_cnt=3 #diameter in nm\n",
     "C=3.45E-22 #kg/ps^2\n",
     "\n",
-    "mass=np.pi*sigma*d_cnt*X0_cnt #total mass of a CNT\n",
+    "mass=np.pi*sigma*d_cnt*X0_cnt #total mass of a DNA\n",
     "\n",
     "K_cnt=(np.pi*C*d_cnt)/(X0_cnt) #extensional rigidity\n",
     "\n",
     "kap_cnt=(K_cnt*d_cnt*d_cnt)/8 #bending rigidity\n",
+    "\n",
+    "##We now populate arrays using the calculated values\n",
     "\n",
     "mass_array=np.zeros(Npoints)\n",
     "K_cnt_array=np.zeros(Npoints)\n",
@@ -37,19 +41,18 @@
     "\n",
     "mass_array.fill(mass)\n",
     "K_cnt_array.fill(K_cnt)\n",
-    "kap_cnt_array.fill(kap_cnt)\n",
-    "#print(mass_array)\n",
-    "#print(K_cnt_array)\n",
-    "#print(kap_cnt_array)"
+    "kap_cnt_array.fill(kap_cnt)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "_fbase= 'mass'\n",
+    "##Here we write in files for mass,K_cnt, and kap_cnt using the populated arrays above\n",
+    "\n",
+    "_fbase= './initfiles/mass'\n",
     "for i in range(0,10):\n",
     "    _fname= _fbase + '_00' + str(i) + '.txt'\n",
     "    _fid=open(_fname,'w+b')\n",
@@ -62,7 +65,7 @@
     "    _fid.write(bytearray(mass_array))\n",
     "    _fid.close()\n",
     "\n",
-    "_fbase='K_cnt'\n",
+    "_fbase='./initfiles/K_cnt'\n",
     "for i in range(0,10):\n",
     "    _fname= _fbase + '_00' + str(i) + '.txt'\n",
     "    _fid=open(_fname,'w+b')\n",
@@ -75,7 +78,7 @@
     "    _fid.write(bytearray(mass_array))\n",
     "    _fid.close()\n",
     "\n",
-    "_fbase='kap_cnt'\n",
+    "_fbase='./initfiles/kap_cnt'\n",
     "for i in range(0,10):\n",
     "    _fname= _fbase + '_00' + str(i) + '.txt'\n",
     "    _fid=open(_fname,'w+b')\n",
@@ -91,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -108,20 +111,22 @@
     }
    ],
    "source": [
-    "X0_cnt=Length/(Npoints-3)\n",
+    "##Here we calculate the initial position of a string with persistence length similar to DNA (The XO_cnt calculated above)\n",
+    "\n",
     "_x=np.linspace(0,Length,Npoints)[:]\n",
     "_y=np.zeros(np.shape(_x))\n",
+    "\n",
     "_y=_x*0\n",
+    "\n",
     "x=np.zeros(Npoints)\n",
     "x[::]=_x+X0_cnt\n",
     "y=np.zeros(Npoints)\n",
-    "y[::]=_z\n",
+    "y[::]=_y\n",
     "\n",
     "#print(x)\n",
-    "#print(z)\n",
+    "#print(y)\n",
     "\n",
     "_outdata=np.zeros(Npoints*6)\n",
-    "\n",
     "_outdata[0::6]=x\n",
     "_outdata[1::6]=y\n",
     "\n",
@@ -133,11 +138,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "_fbase='inputFile'\n",
+    "##Generate an inputFile for the initial position of this DNA molecule\n",
+    "\n",
+    "_fbase='./initfiles/inputFile'\n",
     "_fname=_fbase + '_0' + str(47) +'.txt'\n",
     "_fid=open(_fname,'w+b')\n",
     "_fid.write(bytearray(_outdata))\n",
@@ -146,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -163,6 +170,8 @@
     }
    ],
    "source": [
+    "##Read in file to double check that we generated the file successfully \n",
+    "\n",
     "_fname='./initfiles/inputFile_047.txt'\n",
     "_fid=open(_fname)\n",
     "_data=np.fromfile(_fid,dtype='float')\n",
@@ -173,6 +182,13 @@
     "plt.plot(x_init,y_init)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
