--- a/Mass, Extensional and Bending Rigidity Initializer .ipynb
+++ b/Mass, Extensional and Bending Rigidity Initializer .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -76,9 +76,9 @@
     "#Length= 10000 #length of CNT in nm\n",
     "Length = 5000 #length of DNA molecule in nm\n",
     "mu0 = 3.17E-24 #mass per unit length of DNA in kg/nm\n",
-    "stiffness = 1E-24 #stretching stiffness in kg nm/ps^2\n",
-    "Bs = 2E-25 #bending stiffness in kg*nm^3/ps^2\n",
-    "strain = 0.0\n",
+    "stiffness=1E-24\n",
+    "Bs=2E-25\n",
+    "strain = 0\n",
     "\n",
     "Npoints= 102 #number of masses in DNA\n",
     "\n",
@@ -87,16 +87,14 @@
     "\n",
     "X0_cnt= (Length)/(Npoints-3) #discrete length of DNA in nm\n",
     "\n",
-    "\n",
     "#mass= mu0*X0_cnt #mass of a CNT in kg\n",
-    "mass= mu0*X0_cnt #mass of DNA in kg\n",
+    "mass= 3.17E-24*X0_cnt #mass of DNA in kg\n",
     "\n",
     "#K_cnt= (np.pi*C*d_cnt)/(X0_cnt) #spring constant of CNT in kg/ps^2\n",
-    "#K_cnt= 1.61E-31 #spring constant of DNA in kg/ps^2\n",
     "K_cnt= stiffness/X0_cnt #spring constant of DNA in kg/ps^2\n",
     "\n",
     "#kap_cnt= (K_cnt*d_cnt*d_cnt)/8 #torque applied to CNT in kg*nm^3/ps^2\n",
-    "kap_cnt= Bs/X0_cnt # torsional spring const. in kg*nm^2/ps^2\n",
+    "kap_cnt= Bs/X0_cnt #torque applied to CNT in kg*nm^3/ps^2 at 300K\n",
     "\n",
     "##We now populate arrays using the calculated values\n",
     "\n",
@@ -114,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +179,7 @@
    "source": [
     "##Here we calculate the initial position of a string with persistence length similar to DNA (The XO_cnt calculated above)\n",
     "\n",
-    "_x=np.arange(0,int(Npoints))[:]\n",
+    "_x=np.arange(0,Npoints)[:]\n",
     "_y=np.zeros(np.shape(_x))\n",
     "\n",
     "_y=_x*0\n",
@@ -206,25 +204,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "##Generate an inputFile for the initial position of this DNA molecule\n",
     "\n",
     "_fbase='./initfiles/inputFile'\n",
-    "_fname= _fbase + '_0' + str(45) + '.txt'\n",
-    "_fid=open(_fname,'w+b')\n",
-    "_fid.write(bytearray(_outdata))\n",
-    "_fid.close()"
+    "for i in range(0,10):\n",
+    "    _fname= _fbase + '_00' + str(i) + '.txt'\n",
+    "    _fid=open(_fname,'w+b')\n",
+    "    _fid.write(bytearray(_outdata))\n",
+    "    _fid.close()\n",
+    "for i in range(10,48):\n",
+    "    _fname= _fbase + '_0' + str(i) + '.txt'\n",
+    "    _fid=open(_fname,'w+b')\n",
+    "    _fid.write(bytearray(_outdata))\n",
+    "    _fid.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -242,7 +244,7 @@
    "source": [
     "##Read in file to double check that we generated the file successfully \n",
     "\n",
-    "_fname='./initfiles/inputFile_045.txt'\n",
+    "_fname='./initfiles/inputFile_047.txt'\n",
     "_fid=open(_fname)\n",
     "_data=np.fromfile(_fid,dtype='float')\n",
     "Npoints=len(_data)/6\n",
@@ -255,30 +257,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "5000.0"
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.128e-14\n",
+      "1.5280000000000002e-14\n"
+     ]
     }
    ],
    "source": [
-    "x_init[-2]-x_init[1]"
+    "_fbase= './initfiles1/K_cnt'\n",
+    "\n",
+    "DNA_stiffness_max=1564E-12\n",
+    "DNA_stiffness_min=764E-12\n",
+    "X0_cnt=50E-9\n",
+    "K_cnt_max=(DNA_stiffness_max/X0_cnt)*1E-12\n",
+    "K_cnt_min=(DNA_stiffness_min/X0_cnt)*1E-12\n",
+    "print(K_cnt_max)\n",
+    "print(K_cnt_min)\n",
+    "\n",
+    "#Uncomment to test K_cnt periodicity for n=10\n",
+    "#_x=np.arange(102)\n",
+    "#_y=np.zeros(102)\n",
+    "#_y2=np.zeros(102)\n",
+    "\n",
+    "#_y=K_cnt_max*(np.cos(10*(_x+1)*2*np.pi/103)>0).astype(int)\n",
+    "#_y2=K_cnt_min*(np.sin(10*(_x+7)*2*np.pi/103)>0).astype(int)\n",
+    "#_ytotal=_y+_y2\n",
+    "\n",
+    "#for i in range(len(_ytotal)):\n",
+    "    #if _ytotal[i] >= 4.656E-14:\n",
+    "        #_ytotal[i] = K_cnt_max\n",
+    "    #elif _ytotal[i] <= 0:\n",
+    "        #_ytotal[i] =K_cnt_min\n",
+    "#print(_ytotal)\n",
+    "#plt.plot(_x,_ytotal)\n",
+    "#plt.show()\n",
+    "\n",
+    "for n in range(0,10):\n",
+    "    \n",
+    "    _x=np.arange(102)\n",
+    "    _y=np.zeros(102)\n",
+    "    _y2=np.zeros(102)\n",
+    "\n",
+    "    _y=K_cnt_max*(np.cos(n*(_x+1)*2*np.pi/103)>0).astype(int)\n",
+    "\n",
+    "    _y2=K_cnt_min*(np.sin(n*(_x+7)*2*np.pi/103)>0).astype(int)\n",
+    "\n",
+    "    _ytotal=_y+_y2\n",
+    "    for i in range(len(_ytotal)):\n",
+    "        if _ytotal[i] >= 4.656E-14:\n",
+    "            _ytotal[i] = K_cnt_max\n",
+    "        elif _ytotal[i] <= 0:\n",
+    "            _ytotal[i] = K_cnt_min\n",
+    "            \n",
+    "    _fname= _fbase + '_00' + str(n) + '.txt'\n",
+    "    _fid=open(_fname,'w+b')\n",
+    "    _fid.write(bytearray(_ytotal))\n",
+    "    _fid.close()     \n",
+    "    \n",
+    "for n in range(10,48):\n",
+    "    \n",
+    "    _x=np.arange(102)\n",
+    "    _y=np.zeros(102)\n",
+    "    _y=np.zeros(102)\n",
+    "\n",
+    "    _y=K_cnt_max*(np.cos(n*(_x+1)*2*np.pi/103)>0).astype(int)\n",
+    "\n",
+    "    _y2=K_cnt_min*(np.sin(n*(_x+7)*2*np.pi/103)>0).astype(int)\n",
+    "\n",
+    "    _ytotal=_y+_y2\n",
+    "    for i in range(len(_ytotal)):\n",
+    "        if _ytotal[i] >= 4.656E-14:\n",
+    "            _ytotal[i] = K_cnt_max\n",
+    "        elif _ytotal[i] <= 0:\n",
+    "            _ytotal[i] = K_cnt_min  \n",
+    "            \n",
+    "    _fname= _fbase + '_0' + str(n) + '.txt'\n",
+    "    _fid=open(_fname,'w+b')\n",
+    "    _fid.write(bytearray(_ytotal))\n",
+    "    _fid.close()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
