--- a/Mass, Extensional and Bending Rigidity Initializer .ipynb
+++ b/Mass, Extensional and Bending Rigidity Initializer .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,15 +257,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.128e-14\n",
-      "1.5280000000000002e-14\n"
+      "3.128e-26\n",
+      "1.5280000000000002e-26\n"
      ]
     }
    ],
@@ -275,8 +275,8 @@
     "DNA_stiffness_max=1564E-12\n",
     "DNA_stiffness_min=764E-12\n",
     "X0_cnt=50E-9\n",
-    "K_cnt_max=(DNA_stiffness_max/X0_cnt)*1E-12\n",
-    "K_cnt_min=(DNA_stiffness_min/X0_cnt)*1E-12\n",
+    "K_cnt_max=(DNA_stiffness_max/X0_cnt)*1E-12*1E-12\n",
+    "K_cnt_min=(DNA_stiffness_min/X0_cnt)*1E-12*1E-12\n",
     "print(K_cnt_max)\n",
     "print(K_cnt_min)\n",
     "\n",
